# RustUDPServer

./: Cargo.toml
src/client/: main.rs
src/models/: teststruct.rs
src/server/: main.rs
