[package]
name = "UDPServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[lib]
name = "mylib"
path = "src/models/teststruct.rs"

[dependencies]
serde = "1.0.147"
postcard = "1.0.2"